--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "homepage": "http://accessmanager.in",
   "require": {
-    "php": ">=5.6.4",
-    "access-manager/base": "dev-master"
+    "php": ">=5.6.4"
   },
   "autoload": {
     "psr-4": {
@@ -17,6 +16,5 @@
     "sort-packages": true,
     "optimize-autoloader": true
   },
-  "minimum-stability": "dev",
   "prefer-stable": true
 }
